--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Upload new Files</title>
+	<title>CorrectLy</title>
 </head>
 <body>
 <center>
 
-<h1>Upload new File</h1>
+<h1>Upload a File</h1>
 <form action="/file" method=post enctype=multipart/form-data>
   <p><input id="fileupload" type=file name=file>
      <input type=submit value=Upload></p>
 </form>
 
-<h1>Upload new File</h1>
+<br><hr><br>
+
+<h1>Type a Text</h1>
 <form action="/text" method=post enctype=multipart/form-data>
 <textarea name="textupload" rows="4" cols="50">
 </textarea><br>
