modificatiions and segmetations

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
 <br><hr><br>
 
-<h1>Type a Text</h1>
+<h1>Type your Text</h1>
 <form action="/text" method=post enctype=multipart/form-data>
 <textarea name="textupload" rows="4" cols="50">
 </textarea><br>
